[package]
name = "ferris-guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
anyhow = "1.0.61"
argon2 = "0.4.1"
ron = "0.7.1"
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"
